<resources>
    <string name="app_name">acam</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_camera">Camera</string>
    <string name="title_settings">Settings</string>
    <string name="title_library">Library</string>
    <string name="agc">AGC</string>
    <string name="gain">Gain</string>
    <string name="auto">Auto</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="camera_settings">CAMERA SETTINGS</string>
    <string name="wifi_network">WiFi/Network</string>
    <string name="application_settings">Application Settings</string>
    <string name="emissivity">Emissivity \%</string>
    <string name="export_picture_on_save">Export Picture on Save</string>
    <string name="save_picture_on_save">Export Picture on Save</string>
    <string name="export_metadata">Export Metadata</string>
    <string name="export_resolution">Export Resolution</string>
    <string name="manual_range">Manual Range</string>
    <string name="shutter_sound">Shutter Sound</string>
    <string name="spotmeter">Spotmeter</string>
    <string name="units">Units</string>
    <string name="version">Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="camera_ip_address">Camera IP Address</string>
    <string name="palette">Palette</string>
    <string name="connect">connect</string>
    <string name="get">get</string>
    <string name="disconnect">disconnect</string>
    <string name="get_image">Get Image</string>
    <string name="acquiring">Acquiring...</string>
    <string name="exit">Exit</string>
    <string name="browse">Browse</string>
    <string name="save">Save</string>
    <string name="export">Export</string>
    <string name="quit">Quit</string>
    <string name="open">Open</string>
    <string name="display_spot_meter">Display Spot Meter</string>
    <string name="camera_config">Camera Configuration</string>
    <string name="camera_is_access_point">Camera is Access Point</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="use_static_ip_when_client">Use Static IP when Client</string>
    <string name="client_static_ip_address">Client Static IP Address</string>
    <string name="client_static_ip_netmask">Client Static IP Netmask</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete">delete</string>
    <string name="share">share</string>
<!--    DEBUGGING-->
    <string name="info">INFO</string>
    <string name="item_info_title">[Section Item Info]</string>
    <string name="pos_in_section">Position in section:</string>
    <string name="pos_in_adapter">Position in adapter:</string>
    <string name="view_type">View type:</string>
    <string name="has_header">Has header?</string>
    <string name="has_footer">Has footer?</string>
    <string name="header_pos">"Header position:</string>
    <string name="footer_pos">"Footer position:</string>
    <string name="section_info_title">[Section Info]</string>
    <string name="close">CLOSE</string>
    <string name="warning_disconnect">Changing the camera address will disconnect the camera</string>
    <string name="error_can_not_connect">Failed to connect to camera, please check that the camera is turned on and the camera ip address is correct</string>
    <string name="title_error">Error</string>
    <string name="file">File</string>
</resources>