<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_camera">

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.darcangel.acam.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_navigation_camera_pop"
            app:popUpTo="@id/navigation_camera"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.darcangel.acam.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_pop"
            app:popUpTo="@id/navigation_settings"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.darcangel.acam.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_navigation_library_pop"
            app:popUpTo="@id/navigation_library"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>