<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listener"
            type="com.darcangel.acam.ui.settings.SettingsListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.settings.wifiSettingsFragment">

        <include layout="@layout/guidelines"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            app:layout_constraintEnd_toEndOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/glTop">

            <!--Scrollview Container-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/glEnd"
                app:layout_constraintStart_toStartOf="@+id/glStart">

                <!--Camera is Access Point-->
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swCameraIsAccessPoint"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10sp"
                    android:layout_weight="1"
                    android:onCheckedChanged="@{(buttonView, isChecked) -> listener.onSwitchChanged(buttonView, isChecked)}"
                    android:text="@string/camera_is_access_point" />

                <!--SSID-->
                <androidx.appcompat.widget.LinearLayoutCompat style="@style/SettingsLayout">

                    <TextView
                        style="@style/SettingsTextStart"
                        android:layout_gravity="center_vertical"
                        android:text="@string/ssid" />

                    <EditText
                        style="@style/SettingsEditTextEnd"
                        android:id="@+id/etSSID"
                        android:inputType="text"
                        android:afterTextChanged="@{(text) -> listener.onEditTextChanged(text)}"
                        android:onFocusChange="@{(v, hasFocus) -> listener.onFocusChange(v, hasFocus)}"
                        android:textAlignment="textEnd" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--Password-->
                <androidx.appcompat.widget.LinearLayoutCompat style="@style/SettingsLayout">

                    <TextView
                        style="@style/SettingsTextStart"
                        android:layout_gravity="center_vertical"
                        android:text="@string/password" />

                    <EditText
                        style="@style/SettingsEditTextEnd"
                        android:id="@+id/etPassword"
                        android:inputType="textPassword"
                        android:afterTextChanged="@{(text) -> listener.onEditTextChanged(text)}"
                        android:onFocusChange="@{(v, hasFocus) -> listener.onFocusChange(v, hasFocus)}"
                        android:textAlignment="textEnd" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--Use Static IP when Client-->
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swUseStaticIP"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10sp"
                    android:layout_weight="1"
                    android:onCheckedChanged="@{(buttonView, isChecked) -> listener.onSwitchChanged(buttonView, isChecked)}"
                    android:text="@string/use_static_ip_when_client" />

                <!--Client Static IP Address-->
                <androidx.appcompat.widget.LinearLayoutCompat style="@style/SettingsLayout">

                    <TextView
                        style="@style/SettingsTextStart"
                        android:layout_gravity="center_vertical"
                        android:text="@string/client_static_ip_address" />

                    <EditText
                        style="@style/SettingsEditTextEnd"
                        android:id="@+id/etClientIP"
                        android:inputType="text"
                        android:afterTextChanged="@{(text) -> listener.onEditTextChanged(text)}"
                        android:onFocusChange="@{(v, hasFocus) -> listener.onFocusChange(v, hasFocus)}"
                        android:textAlignment="textEnd" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--Client Static Netmask-->
                <androidx.appcompat.widget.LinearLayoutCompat style="@style/SettingsLayout">

                    <TextView
                        style="@style/SettingsTextStart"
                        android:layout_gravity="center_vertical"
                        android:text="@string/client_static_ip_address" />

                    <EditText
                        style="@style/SettingsEditTextEnd"
                        android:id="@+id/etClientNetmask"
                        android:inputType="text"
                        android:afterTextChanged="@{(text) -> listener.onEditTextChanged(text)}"
                        android:onFocusChange="@{(v, hasFocus) -> listener.onFocusChange(v, hasFocus)}"
                        android:textAlignment="textEnd" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>